--- a/javajam.css
+++ b/javajam.css
@@ -5,35 +5,30 @@
   box-sizing : border-box;
 }
 
-#heroroad{
+/* #heroroad{
   background-image:url("./lab6image/windingroad.jpg");
   background-size: 70%;
   height: 250px;
 
 
-}
+} */
 
-#heromugs{
-  /* background-image: url("./lab6image/heromugs.jpg"); */
+/* #heromugs{
+  background-image: url("./lab6image/heromugs.jpg");
   background-size: 130%;
   height: 250px;
 
-}
+} */
 
-#heroguitar{
-  /* background-image: url("./lab6image/heroguitar.jpg"); */
+/* #heroguitar{
+  background-image: url("./lab6image/heroguitar.jpg");
   background-size: 130%;
   height: 250px;
-
-  /*C:\Users\jwshi\Desktop\2019Fall\
-  1030\lab\lab6,proj6\lab6\javajam6*/
-  /*file:///C:/Users/jwshi/Desktop/2019Fall/
-  1030/lab/lab6,proj6/lab6/javajam6/music.html*/
-}
+} */
 
 body{
-    background-color: black;
-    background-image: url("./lab6image/background.gif");
+    background-color: #ecd9ba;
+    /* background-image: url("./lab6image/background.gif"); */
     /* max-width: 100%
     height:auto;
     background-size: cover; */
@@ -41,14 +36,16 @@ body{
     font-family: Verdana, Arial, sans-serif;
 }
 header{
-  background-color: #D2B48C;
-  height: 150px;
-  /* background-image: url("./lab6image/javajamlogo.jpg"); */
+  background-color: #dce4e4;
+  height: 145px;
+  background-size: contain;
+  background-image: url("./lab6image/pflogo1.png");
   background-repeat: no-repeat;
 }
 h1{
-  padding-top: 40px;
-  padding-left: 220px;
+  color: #D2B48C;
+  padding-top: 20px;
+  padding-left: 250px;
   font-size: 3em;
 }
 nav{
@@ -91,7 +88,7 @@ footer{
   text-align: center;
 }
 #wrapper{
-  background-color: #231814;
+  background-color: #f4f0db;
   min-width: 900px;
   max-width: 1280px;
   box-shadow: 10px 5px 5px black;
@@ -118,7 +115,7 @@ main{
   padding-top: 0;
   display: block;
   margin-left:200px;
-  background-color: #FEF6C2;
+  background-color: #f4f0db;
 }
 main h2, main h3, main h4, main p, main div, main ul, main dl{
   padding-left: 3em;
