--- a/GastownClothingStores/project.css
+++ b/GastownClothingStores/project.css
@@ -1,27 +1,23 @@
 @media only screen and (max-width: 1024px) {
-  body{
-    margin: 0;
+  body {
+    /* margin: 0; */
     background-image: none;
-
   }
-  #wrapper{
+  #wrapper {
     width: auto;
     min-width: 0;
     margin: 0;
     padding: 0;
     box-shadow: none;
   }
-  header{
-    border-bottom: 5px solid #FEF6C2;
-  }
-  h1{
+  h1 {
     margin-top: 0;
     margin-bottom: 1em;
     padding-top: 1em;
     padding-bottom: 1em;
     font-size: 2.5em;
   }
-  nav{
+  nav {
     color: black;
     float: none;
     width: auto;
@@ -29,198 +25,167 @@
     margin: 10px;
     font-size: 1.3em;
   }
-  nav li{
+  nav li {
     display: inline-block;
   }
-  nav a{
+  nav a {
     padding: 1em;
     width: 8em;
     font-weight: bold;
-    color : black;
+    color: black;
     border-style: none;
   }
-  nav ul{
+  nav ul {
     padding: 0;
     margin: 0;
   }
-  #heroroad{
-    padding: 0;
-    margin: 0;
-  }
-  #heromugs{
-    padding: 0;
-    margin: 0;
-  }
-  #heroguitar{
-    padding: 0;
-    margin: 0;
-  }
-  main{
+  main {
     margin: 0;
     font-size: 90%;
   }
 }
 
 @media only screen and (max-width: 768px) {
-  header{
-
+  header {
     height: 128px;
   }
-  h1{
+  h1 {
     font-size: 2em;
     text-align: center;
-    padding-left:0;
+    padding-left: 0;
   }
-  nav{
+  nav {
     margin: 0;
-    color : black;
+    color: black;
   }
-  nav a{
-    color : black;
+  nav a {
+    color: black;
     display: block;
     padding: 0.2em;
     width: auto;
-    border-bottom: 1px #FEF6C2;
+    border-bottom: 1px #fef6c2;
   }
-  nav li{
+  nav li {
     display: block;
   }
-  main{
+  main {
     padding-top: 1px;
   }
-  h2{
+  h2 {
     padding-top: 0.5em;
     padding-right: 0;
     padding-bottom: 0;
     padding-left: 0.5em;
     margin-right: 0.5em;
   }
-  .details{
+  .details {
     padding-left: 0.5em;
     padding-right: 0.5em;
   }
-  #heroroad{
-    background-image: none;
-    height: auto;
-  }
-  #heromugs{
-    background-image: none;
-    height: auto;
-  }
-  #heroguitar{
-    background-image: none;
-    height: auto;
-  }
-  .floatleft{
+  .floatleft {
     padding-left: 0.5em;
     padding-right: 0.5em;
   }
-  #mobile{
-    display: inline;
+  #mobile {
+    display: none;
   }
-  #desktop{
+  #desktop {
     display: none;
   }
 }
 
-
-
-body a{
+body a {
   text-decoration: none;
-  color : black;
-}
-body a:link{
-  color : black;
-}
-
-body a:visited{
   color: black;
 }
-body a:hover{
+body a:link {
+  color: black;
+}
+
+body a:visited {
+  color: black;
+}
+body a:hover {
   color: gray;
 }
 
-
-
-nav{
-  font-family:sans-serif;
+nav {
+  font-family: sans-serif;
   font-size: 1.25em;
 }
 
-nav a{
+nav a {
   text-decoration: none;
-  color : black;
+  color: black;
 }
-nav a:link{
-  color: #FEF6C2;
+nav a:link {
+  color: #fef6c2;
   color: black;
 }
 
-nav a:visited{
+nav a:visited {
   color: black;
 }
-nav a:hover{
+nav a:hover {
   text-decoration: underline;
-  color:black;
-}
-footer a:link{
   color: black;
 }
-div a{
+footer a:link {
+  color: black;
+}
+div a {
   font-style: italic;
-  color : black;
+  color: black;
 }
-div a:hover{
+div a:hover {
   text-decoration: underline;
-  color : black;
-
+  color: black;
 }
-#gastownbackground{
+#gastownbackground {
   background-image: url("gastownn.jpg");
   background-size: 100%;
   height: 100px;
 }
-#gastownpic{
+#gastownpic {
   background-image: url("gastownpic.jpg");
   background-size: 100%;
   height: 100px;
 }
 
-body{
-    background-color:  #d4efe6;
-    background-size: 100%;
-    width: 500px;
-    height: 100px;
+body {
+  background-color: #d4efe6;
+  background-size: 100%;
+  width: 500px;
+  height: 100px;
 
-    color: #221811;
-    font-family: Verdana, Arial, sans-serif;
+  color: #221811;
+  font-family: Verdana, Arial, sans-serif;
 }
-tr:nth-child(odd){
+tr:nth-child(odd) {
   background-color: skyblue;
 }
-  form{
-    padding: 2em;
-
+form {
+  padding: 2em;
 }
-label{
-    float : left;
-    display: block;
-    text-align: right;
-    width: 8em;
-    padding-right : 1em;
+label {
+  float: left;
+  display: block;
+  text-align: right;
+  width: 8em;
+  padding-right: 1em;
 }
-input{
-    display: block;
-    margin-bottom: 1em;
+input {
+  display: block;
+  margin-bottom: 1em;
 }
-textarea{
-    display: block;
-    margin-bottom: 1em;
+textarea {
+  display: block;
+  margin-bottom: 1em;
 }
-#mysubmit{
+#mysubmit {
   margin-left: 9.5em;
 }
-#gallery span{
+#gallery span {
   position: absolute;
   left: -1000px;
   opacity: 0;
