--- a/portfolio.css
+++ b/portfolio.css
@@ -1,20 +1,16 @@
 /*width 1024 or less*/
 
-
-*{
-  box-sizing : border-box;
+* {
+  box-sizing: border-box;
 }
 
-.para{
+.para {
   padding-left: 5px;
 }
 .profile__column {
   display: flex;
   align-items: center;
   padding-left: 0px;
-  
-
-  
 }
 .profile__content .profile__name {
   font-size: 35px;
@@ -23,72 +19,68 @@
   /* margin-bottom: 5px; */
 }
 .profile__desc {
-font-size: 13px;
+  font-size: 13px;
 }
 
-body{
-    background-color: #ecd9ba;
-    /* background-image: url("./lab6image/background.gif"); */
-    /* max-width: 100%
+body {
+  background-color: #ecd9ba;
+  /* background-image: url("./lab6image/background.gif"); */
+  /* max-width: 100%
     height:auto;
     background-size: cover; */
-    color: #221811;
-    font-family: Verdana, Arial, sans-serif;
+  color: #221811;
+  font-family: Verdana, Arial, sans-serif;
 }
-header{
+header {
   background-color: #dce4e4;
   height: 145px;
   background-size: contain;
   background-image: url("./lab6image/pflogo1.png");
   background-repeat: no-repeat;
-  
 }
-h1{
-  color: #D2B48C;
+h1 {
+  color: #d2b48c;
   padding-top: 20px;
   padding-left: 250px;
   font-size: 3em;
 }
-nav{
-
+nav {
   float: left;
   width: 200px;
   text-align: center;
   font-weight: bold;
   font-size: 1.5em;
   padding-top: 10px;
-
 }
-nav a{
+nav a {
   text-decoration: none;
 }
-nav a:link{
-  color: #FEF6C2;
+nav a:link {
+  color: #fef6c2;
 }
 
-nav a:visited{
-  color: #D2B48C;
+nav a:visited {
+  color: #d2b48c;
 }
-nav a:hover{
-  color: #CC9933;
+nav a:hover {
+  color: #cc9933;
 }
 
-nav ul{
+nav ul {
   list-style-type: none;
-  padding-left:0;
+  padding-left: 0;
 }
 
-
-
-footer{
+footer {
   padding-bottom: 10px;
   border-top: 2px solid #221811;
-  background-color: #D2B48C;
-  font-size: .60em;
+  background-color: #d2b48c;
+  font-size: 0.6em;
   font: italic;
   text-align: center;
 }
-#wrapper{
+
+#wrapper {
   background-color: #f4f0db;
   min-width: 900px;
   max-width: 1280px;
@@ -97,217 +89,194 @@ footer{
   margin-right: auto;
   margin-left: auto;
 }
-/* img{
-  align"right";
-} */
-h2{
+
+h2 {
   text-transform: uppercase;
   border-bottom: 2px solid black;
-  background-color: #D2B48C;
+  background-color: #d2b48c;
   font-size: 1.2em;
-  padding-left: .5em;
+  padding-left: 0.5em;
   padding-bottom: 0;
   /* clear: left; */
 }
-main{
+main {
   padding-left: 0;
   padding-right: 0;
   padding-bottom: 2em;
   padding-top: 0;
   display: block;
-  margin-left:200px;
+  margin-left: 200px;
   background-color: #f4f0db;
 }
-main h2, main h3, main h4, main p, main div, main ul, main dl{
+main h2,
+main h3,
+main h4,
+main p,
+main div,
+main ul,
+main dl {
   padding-left: 3em;
   padding-right: 2em;
 }
 
-
-header, nav, main, footer{
-  display:block;
-
+header,
+nav,
+main,
+footer {
+  display: block;
 }
 
-.details{
-  overflow: auto;/*similar to clear*/
+.details {
+  overflow: auto; /*similar to clear*/
   padding-left: 20%;
   padding-right: 20%;
 }
-/* img{
-  padding-left:10px;
-  padding-right:10px;
-} */
 
-.floatleft{
-    float:left;
-    padding-right:2em;
-    padding-bottom:2em;
+.floatleft {
+  float: left;
+  padding-right: 2em;
+  padding-bottom: 2em;
 }
-#mobile{
+#mobile {
   display: none;
 }
 
-#desktop{
+#desktop {
   display: inline;
 }
-table{
+table {
   margin-left: auto;
   margin-right: auto;
   width: 90%;
   border-spacing: 0;
   background-color: 0;
-
 }
-td{
-  padding: 10px;
-
-}
-th{
+td {
   padding: 10px;
 }
-tr:nth-child(odd){
-  background-color: #D2B48E;
+th {
+  padding: 10px;
 }
-form{
+tr:nth-child(odd) {
+  background-color: #d2b48e;
+}
+form {
   padding: 2em;
 }
-label{
-  float : left;
+label {
+  float: left;
   display: block;
   text-align: right;
   width: 8em;
-  padding-right : 1em;
+  padding-right: 1em;
 }
-input{
+input {
   display: block;
   margin-bottom: 1em;
 }
-textarea{
+textarea {
   display: block;
   margin-bottom: 1em;
 }
-#mysubmit{
+#mysubmit {
   margin-left: 9.5em;
 }
-/* #herojobs{
-  height: 250px;
-  /* background-image: url("lab6image/herojobs.jpg"); */
-  background-size: 100% 100%;
-} */
-
 
 @media only screen and (max-width: 1024px) {
-  body{
+  body {
     background-image: none;
     margin: 0;
-
-
   }
-  #wrapper{
+  #wrapper {
     width: auto;
     min-width: 0;
     margin: 0;
     padding: 0;
     box-shadow: none;
   }
-  header{
-    border-bottom: 5px solid #FEF6C2;
+  header {
+    border-bottom: 5px solid #fef6c2;
   }
-  h1{
+  h1 {
     margin-top: 0;
     margin-bottom: 1em;
     padding-top: 1em;
     padding-bottom: 1em;
     font-size: 2.5em;
   }
-  nav{
+  nav {
     float: none;
     width: auto;
     padding-top: 0;
     margin: 10px;
     font-size: 1.3em;
   }
-  nav li{
+  nav li {
     display: inline-block;
   }
-  nav a{
+  nav a {
     padding: 1em;
     width: 8em;
     font-weight: bold;
     border-style: none;
   }
-  nav ul{
+  nav ul {
     padding: 0;
     margin: 0;
   }
-  
-  main{
+
+  main {
     margin: 0;
     font-size: 90%;
   }
 }
 
 @media only screen and (max-width: 768px) {
-  header{
+  header {
     height: 128px;
     /* background-image: url("./lab6image/javajammini.jpg"); */
   }
-  h1{
+  h1 {
     font-size: 2em;
     text-align: center;
-    padding-left:0;
+    padding-left: 0;
   }
-  nav{
+  nav {
     margin: 0;
   }
-  nav a{
+  nav a {
     display: block;
     padding: 0.2em;
     width: auto;
     border-bottom: 1px;
-    border-bottom-color: #FEF6C2;
+    border-bottom-color: #fef6c2;
   }
-  nav li{
+  nav li {
     display: block;
   }
-  main{
+  main {
     padding-top: 1px;
   }
-  h2{
+  h2 {
     padding-top: 0.5em;
     padding-right: 0;
     padding-bottom: 0;
     padding-left: 0.5em;
     margin-right: 0.5em;
   }
-  .details{
+  .details {
     padding-left: 0.5em;
     padding-right: 0.5em;
   }
-  #heroroad{
-    background-image: none;
-    height: auto;
-  }
-  #heromugs{
-    background-image: none;
-    height: auto;
-  }
-  #heroguitar{
-    background-image: none;
-    height: auto;
-  }
-  .floatleft{
+
+  .floatleft {
     padding-left: 0.5em;
     padding-right: 0.5em;
   }
-  #mobile{
+  #mobile {
     display: inline;
   }
-  #desktop{
+  #desktop {
     display: none;
-  }
-  #herojobs{
-    diplay: none;
   }
 }
