--- a/sw-test/style.css
+++ b/sw-test/style.css
@@ -2,11 +2,11 @@
   position: fixed;
   top: 0;
   width: 100%;
-  height: 6%;
+  height: 4%;
   left: 0;
 
   text-align: center;
-  font-size: 30px;
+  font-size: 20px;
 
   /* floating on top of other elements/texts */
   z-index: 1; 
@@ -75,6 +75,11 @@ button img{
   border: 1px solid black;
   box-shadow: 2px 2px 3px black;
   /* display: none; */
+}
+
+#description{
+  display: grid;
+  grid-template-columns: 1fr 1fr;
 }
 
 
