--- a/sw-test/style.css
+++ b/sw-test/style.css
@@ -71,11 +71,29 @@ button img{
 
 /* -------------------------------------------------------------------- */
 
-#canvasOne{
-  border: 1px solid black;
-  box-shadow: 2px 2px 3px black;
+#canvasAndFrame{
+  z-index:2;
+  width:100%;
+  /* height:300px; */
+  margin:0 auto;
+  position: relative; /* this to make the canvases children of the div.container */
+}
+
+#canvasOne, #frame{
+  /* border: 1px solid black; */
+  /* box-shadow: 2px 2px 3px black; */
   /* background-image: url(../images/sketchbook.jpg); */
-  
+}
+
+#canvasOne{
+  /* width:100%;
+  height:100%; */
+  position:absolute;
+  left: 0;
+  top: 0; 
+  padding-left: 40px; 
+  padding-top: 45px;
+  z-index:3;
 }
 
 #description{
