--- a/sw-test/style.css
+++ b/sw-test/style.css
@@ -72,6 +72,7 @@ button img{
 /* -------------------------------------------------------------------- */
 
 #canvasAndFrame{
+  cursor: url('../images/cursor.cur'), auto;
   z-index:2;
   width:100%;
   /* height:300px; */
