--- a/sw-test/style.css
+++ b/sw-test/style.css
@@ -72,7 +72,6 @@ button img{
 /* -------------------------------------------------------------------- */
 
 #canvasAndFrame{
-  cursor: url('../images/cursor.cur'), auto;
   z-index:2;
   width:100%;
   /* height:300px; */
@@ -87,6 +86,8 @@ button img{
 }
 
 #canvasOne{
+  /* https://www.cursor.cc/?action=icon&file_id=1148 */
+  cursor: url('../images/cursor.cur'), auto;
   /* width:100%;
   height:100%; */
   position:absolute;
