--- a/sw-test/style.css
+++ b/sw-test/style.css
@@ -1,3 +1,7 @@
+/* #title{
+  text-align: center;
+} */
+
 #statusBar{
   position: fixed;
   top: 0;
@@ -33,6 +37,8 @@ main{
   width: 320px;
   height: 240px;
 }
+
+
 
 #cameraOnButton, #cameraOffButton, #cameraCaptureButton{
   /* It starts on a new line, and takes up the whole width */
@@ -73,6 +79,13 @@ button img{
 #yellowButton{
   background-color: yellow;
   padding: 10px 15px;
+}
+
+#saveButton{
+  position: absolute;
+  padding: 5px 10px;
+  margin-left: 237px;
+  /* float: right; */
 }
 
 .photoContainer, #savedImageContainer{
