--- a/style.css
+++ b/style.css
@@ -445,7 +445,7 @@ footer{
   }
 
   .pokemonButton{
-    font-size: 40px; 
+    font-size: 2.0rem; 
   }
   /* ------------------------------------------ */
 
