--- a/style.css
+++ b/style.css
@@ -179,7 +179,7 @@
   #pokemonDetailsCardContainer {
     display: grid;
     grid-template-areas: "title" "sprite" "info";
-    grid-template-rows: 35px 110px 180px;
+    grid-template-rows: 7vh 18vh 30vh;
     /* grid-template-rows: 35px calc(110/325) calc(180/325); */
 
     width: 250px; /*card width*/
@@ -276,14 +276,16 @@
     color: var(--pokemonYellow);
     
     height: 6vh;
-
+    /* width: auto;
+    height: 3vh;
+    font-size: 6vw; */
 
     font-size: calc(6vh - 0.5vw); 
 
     text-align: center;
     margin: 0rem 0rem;
 
-    width: 100%;
+    width: auto;
     /* top: 0; */
     /* Pokemon */
     text-align: center;
@@ -397,14 +399,14 @@
 
 
     height: 100vh; /*change*/ 
-    width: 100vw;
+    width: 67vw;
 
   }
 
   #pokemonDetailsCardContainer {
     display: grid;
     grid-template-areas: "title" "sprite" "info";
-    grid-template-rows: 35px 110px 180px;
+    grid-template-rows: 4vh 12vh 20vh;
     /* grid-template-rows: 35px calc(110/325) calc(180/325); */
 
     width: 250px; /*card width*/
@@ -420,6 +422,8 @@
 
     /* margin: auto; */
     left: 50px;
+
+    
   }
 
   #pokemonDetailsCardTitle {
@@ -432,8 +436,23 @@
     box-shadow: 1px 2px;
     
     text-align: center;
-    font-size: 20px;
+    font-size: 2vh;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    /* font-size: 4vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;  */
   }
+  /* #pokemonDetailsCardTitle{
+    font-size: 4vh;
+    display: flex;
+    justify-content: center;
+    align-items: center; 
+  } */
 
   #pokemonDetailsCardSprite {
     grid-area: sprite;
@@ -442,11 +461,20 @@
     border: 1px solid;
     margin-bottom: 5px;
   }
+  #pokemonDetailsCardInfo{
+    font-size: 1.4vh;
+    line-height: 150%;
+  }
+
 
   img{
-    height: 110px;
-    padding-left: 75px;
-    padding-bottom: 30px;
+    /* padding-top: 30px; */
+    /* height: 110px; */
+    padding-left: 55px;
+    /* padding-bottom: 30px; */
+
+    width: 60%;
+    height: auto;
   }
 
   .questionMarkImage{
@@ -500,10 +528,11 @@
   .grid {
     display: inline;
   }
-#item1{
+  #item1{
     grid-column: 1 / 2;
     max-width: 251px;
     min-width: 250px;
+    height: 25vh;
   }
   #pokemonSubheading{
     text-align: center;
@@ -546,57 +575,11 @@
     height: 25vh;
 
   }
-
-  /* #item1{
-    grid-column: 1 / 2;
-    max-width: 251px;
-    min-width: 250px;
-  }
-  #pokemonSubheading{
-    text-align: center;
-
-    padding-top: 0rem;
-    max-width: 251px;
-    min-width: 250px;
-  }
-  #pokemonSubheadingText{
-    font-family: "PokemonSolid"; 
-    color: black;
-    font-weight: bolder; 
-    font-size: 1.7rem;
-
-    display: inline;
-    height: 7vh;
-  }
-
-  #pokemonSubheadingCounter{
-    font-family: "PokemonHollow"; 
-    font-weight:bolder; 
-    font-size: 1.5rem;
-    margin: 0rem 0rem 0.625rem 0rem;
-    display: inline;
-  }
-
-  #pokemonListContainer{
-
-    font: 16px Arial, Serif;
-    border: none;
-
-    overflow: scroll;
-    scrollbar-color: black white;
-    scrollbar-width: thin;
-    overflow-x: hidden;
-
-    max-width: 251px;
-    min-width: 250px;
-
-    height: 90vh;
-
-  } */
   #item1{
     /* text-align: center; */
     max-width: 100vw;
     min-width: 100vw;
+    height: 25vh;
   }
   #pokemonSubheading{
     text-align: center;
@@ -630,46 +613,75 @@
   #item2{
     display:flex; 
     align-items: center;
-    height: 70vh;
+    margin: 0 auto;
+    height: 65vh;
+    position: relative;
   } 
 
-  /* #pokemonDetailsCardContainer {
-    display: grid;
-    grid-template-areas: "title" "sprite" "info";
-    grid-template-rows: 35px 110px 180px;
-
-
-    width: 250px; 
-    border-radius: 8px;
-    background-color: var(--pokemonYellow);
-    border: 1px solid;
-    padding: 10px;
-    box-shadow: 7px 10px;
-    
-    position:relative; 
-    left:120px; 
-    top:40px;
-
-    left: 50px;
-  } */
 
   #pokemonDetailsCardContainer {
+
     grid-template-rows: 7vh 18vh 30vh;
 
-    top: 0vh;
-    left: 10vw;
+    /* top: 0vh;
+    left: 10vw; */
+    position: absolute;
+    top: 47%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+  }
+
+  #pokemonDetailsCardTitle{
+    font-size: 4vh;
+    display: flex;
+    justify-content: center;
+    align-items: center; 
+  }
+
+  
+  
+  #pokemonDetailsCardInfo{
+    font-size: 2.2vh;
+    line-height: 150%;
+  }
+  #pokemonDetailsCardSprite {
+    grid-area: sprite;
+    background-color: beige;
+    width: 250px;
+    border: 1px solid;
+    /* margin-bottom: 5px; */
+
+    display: flex;
+  justify-content: center;
+  align-items: center;
+  }
+  img{
+    /* padding-top: 30px; */
+    /* height: 110px; */
+    padding-left: 0px;
+    /* padding-bottom: 30px; */
+
+    width: 50%;
+    height: auto;
+  }
+
+  footer{
+    height: 3vh;
   }
 }
 
 /* 3. Mobile - Landscape */
 @media screen and (orientation: landscape) and (max-height: 767px) and (max-width: 1023px) {
+  html, body, .container {
+    height: 100%;
+  }
   #no-mobile{
     position: absolute;
     z-index: 99;
     
     background-color: #FFCB05;
-    width: 140%;
-    height: 140%;
+    width: 100%;
+    height: 100%;
     top: 0;
 
     display: flex;
@@ -678,15 +690,22 @@
     text-align: center;
     font-size: 26px;
     
+      display: flex;
+  justify-content: center;
+  align-items: center;
   }
 
   #no-mobile{
-    display: flex;
+    /* display: block; */
+    line-height: 130%;
   }
-
+  .grid {
+    max-height: 350px;
+  }
   #no-mobile-title{
+    display: block;
     font-family: "PokemonSolid"; 
-    text-shadow: 5px 5px var(--pokemonLightBlue),
+    /* text-shadow: 5px 5px var(--pokemonLightBlue),
       5px 0 var(--pokemonLightBlue),
       5px -5px var(--pokemonLightBlue),
       0 -5px var(--pokemonLightBlue),
@@ -709,11 +728,15 @@
       1px -5px var(--pokemonLightBlue),
       2px -5px var(--pokemonLightBlue),
       3px -5px var(--pokemonLightBlue),
-      4px -5px var(--pokemonLightBlue);
+      4px -5px var(--pokemonLightBlue); */
   }
   
+  #no-mobile-alert{
+    color: red;
+    font-weight: bold;
+  }
 
-  /* #pokemonHeading, #item1, #item2, footer{
+  #pokemonHeading, #item1, #item2{
     display: none;
-  } */
+  }
 }
