--- a/style.css
+++ b/style.css
@@ -33,7 +33,7 @@
 }
 
 
-
+/* 1. Desktop, Tablet */
 @media screen and (orientation: landscape){
   #no-mobile{
     display: none;
@@ -41,26 +41,15 @@
   
   /* 1)Header */
   #pokemonHeading{
-    display: block;
     background-color: var(--pokemonDarkBlue);
-    height: 10vh;
-    /* width: 200vw; */
     color: var(--pokemonYellow);
+    height: 10vh;
     font-family: "PokemonSolid"; 
-    /* calc(12px - .5vw) */
     font-size: calc(8vh + 0.5vw); 
     text-align: center;
     margin: 0rem 0rem;
-
-    /* width: 100%; */
-
-    text-align: center;
-    margin: 0px 0px;
     padding: 30px;
-    background-color: var(--pokemonDarkBlue);
-    color: var(--pokemonYellow);
     line-height: 0.5;
-
     text-shadow: 5px 5px var(--pokemonLightBlue),
       5px 0 var(--pokemonLightBlue),
       5px -5px var(--pokemonLightBlue),
@@ -85,14 +74,11 @@
       2px -5px var(--pokemonLightBlue),
       3px -5px var(--pokemonLightBlue),
       4px -5px var(--pokemonLightBlue);
-
-      
   }
 
   .grid {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
-    grid-template-rows: 32.1rem;
   }
 
   /* 2-1)item1 */
@@ -102,19 +88,19 @@
     max-width: 363px;
     min-width: 362px;
   }
+
   #pokemonSubheading{
     text-align: center;
-    /* height: 6.5vh; */
     padding-top: 0rem;
     min-width: 362px;
     max-width: 362px;
   }
+
   #pokemonSubheadingText{
     font-family: "PokemonSolid"; 
     color: black;
     font-weight: bolder; 
     font-size: 2rem;
-
     display: inline;
     height: 7vh;
   }
@@ -128,31 +114,22 @@
   }
 
   #pokemonListContainer{
-
-    font: 16px Arial, Serif;
     border: none;
-
+    font: 16px Arial, Serif;
     overflow: scroll;
     scrollbar-color: black white;
     scrollbar-width: thin;
     overflow-x: hidden;
-    /* overflow: auto; */
-
-    /* box-shadow:inset 0 0 20px #333; */
     max-width: 363px;
     min-width: 362px;
-    /* width: 30vw; */
     height: 90vh;
-
   }
 
   .pokemonButton{
     background-color: Transparent;
-
     border: none;
     padding: 0 2px;
     font-size: 3vh;
-    
     cursor: pointer;
   }
 
@@ -162,50 +139,35 @@
     grid-column: 2 / -1;
     background-image: url("pokemon_background.jpeg");
     background-repeat: repeat;
-
-    /* background-size: contain; */
-
-    height: 100vh; /*change*/ 
-    /* calc(6vh - 0.5vw);  */
+    height: 100vh; 
     min-width: 64vw;
     width: 75vw;
-    /* max-width: 100vw; */
     left: 0;
     background-size: 93rem 33rem;
-    /* display:flex;  */
-    /* align-items: center; */
   }
 
   #pokemonDetailsCardContainer {
     display: grid;
     grid-template-areas: "title" "sprite" "info";
     grid-template-rows: 7vh 18vh 30vh;
-    /* grid-template-rows: 35px calc(110/325) calc(180/325); */
-
-    width: 250px; /*card width*/
+    width: 250px; 
     border-radius: 8px;
     background-color: var(--pokemonYellow);
     border: 1px solid;
     padding: 10px;
     box-shadow: 7px 10px;
-    
     position:relative; 
     left:120px; 
     top:40px;
-
-    /* margin: auto; */
-    left: 50px;
   }
 
   #pokemonDetailsCardTitle {
     grid-area: title;
     background-color:var(--pokemonYellow);
-    
     border: 1px solid;
     padding-top: 4px;
     margin-bottom: 5px;
     box-shadow: 1px 2px;
-    
     text-align: center;
     font-size: 20px;
   }
@@ -247,24 +209,20 @@
   footer{
     text-align: center;
     background-color: var(--pokemonDarkBlue);
-
     margin-top: 10px;
     border-top: 2px solid #221811;
     padding-bottom: 5px;
-
     color: rgb(187, 187, 187);
-
-    
     position: fixed;
     bottom: 0;
     width: 100%;
     height: 3.5vh;
     justify-content: center;
     align-items: center;
-    /* height: 1.625rem; */
   }
 }
 
+/* 2. Tablet */
 @media screen and (orientation: portrait) {
   #no-mobile{
     display: none;
@@ -272,30 +230,17 @@
   
   /* 1)Header */
   #pokemonHeading{
-    background-color: var(--pokemonDarkBlue);
-    color: var(--pokemonYellow);
-    
     height: 6vh;
-    /* width: auto;
-    height: 3vh;
-    font-size: 6vw; */
-
-    font-size: calc(6vh - 0.5vw); 
-
-    text-align: center;
-    margin: 0rem 0rem;
-
-    width: auto;
-    /* top: 0; */
-    /* Pokemon */
-    text-align: center;
-    margin: 0px 0px;
-    padding: 20px 0px;
-    background-color: var(--pokemonDarkBlue);
-    color: var(--pokemonYellow);
     line-height: 0.5;
+    margin: 0rem 0rem;
+    padding: 20px 0px;
 
+    background-color: var(--pokemonDarkBlue);
+
+    text-align: center;
     font-family: "PokemonSolid"; 
+    font-size: calc(6vh - 0.5vw); 
+    color: var(--pokemonYellow);
     text-shadow: 5px 5px var(--pokemonLightBlue),
       5px 0 var(--pokemonLightBlue),
       5px -5px var(--pokemonLightBlue),
@@ -325,134 +270,86 @@
   .grid {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
-    grid-template-rows: 32.1rem;
   }
 
-  /* 2-1)item1 */
+  /* 2-1)item1 (Left) */
   #item1{
     grid-column: 1 / 2;
     max-width: 251px;
     min-width: 250px;
   }
+
   #pokemonSubheading{
     text-align: center;
-
-    padding-top: 0rem;
-    max-width: 251px;
-    min-width: 250px;
   }
+
   #pokemonSubheadingText{
+    display: inline;
     font-family: "PokemonSolid"; 
     color: black;
     font-weight: bolder; 
     font-size: 1.7rem;
-
-    display: inline;
     height: 7vh;
+    line-height: 1;
   }
 
   #pokemonSubheadingCounter{
+    display: inline;
     font-family: "PokemonHollow"; 
     font-weight:bolder; 
     font-size: 1.5rem;
     margin: 0rem 0rem 0.625rem 0rem;
-    display: inline;
+    line-height: 1;
   }
 
   #pokemonListContainer{
-
-    font: 16px Arial, Serif;
-    border: none;
-
-    overflow: scroll;
-    scrollbar-color: black white;
-    scrollbar-width: thin;
     overflow-x: hidden;
-
-    max-width: 251px;
-    min-width: 250px;
-
     height: 90vh;
-
   }
 
   .pokemonButton{
     background-color: Transparent;
-
     border: none;
-    padding: 0 2px;
     font-size: 2rem; 
-    
     cursor: pointer;
   }
 
-  /* 2-2)item2 */
+  /* 2-2)item2 (Right) */
   #item2{
     grid-column: 2 / -1;
     background-image: url("pokemon_background.jpeg");
-    background-repeat: repeat;
-
-    background-size: contain;
-    /* background */
     background-size: 93rem 33rem;
-
-
-
-    height: 100vh; /*change*/ 
+    height: 100vh; 
     width: 67vw;
-
   }
 
   #pokemonDetailsCardContainer {
     display: grid;
     grid-template-areas: "title" "sprite" "info";
     grid-template-rows: 4vh 12vh 20vh;
-    /* grid-template-rows: 35px calc(110/325) calc(180/325); */
-
-    width: 250px; /*card width*/
-    border-radius: 8px;
     background-color: var(--pokemonYellow);
+    width: 250px; 
+    border-radius: 8px;
     border: 1px solid;
     padding: 10px;
     box-shadow: 7px 10px;
-    
     position:relative; 
     left:120px; 
-    top:40px;
-
-    /* margin: auto; */
-    left: 50px;
-
-    
+    top:40px;  
   }
 
   #pokemonDetailsCardTitle {
     grid-area: title;
     background-color:var(--pokemonYellow);
-    
     border: 1px solid;
-    padding-top: 4px;
     margin-bottom: 5px;
     box-shadow: 1px 2px;
-    
-    text-align: center;
     font-size: 2vh;
 
     display: flex;
     justify-content: center;
     align-items: center;
-
-    /* font-size: 4vh;
-    display: flex;
-    justify-content: center;
-    align-items: center;  */
   }
-  /* #pokemonDetailsCardTitle{
-    font-size: 4vh;
-    display: flex;
-    justify-content: center;
-    align-items: center; 
-  } */
 
   #pokemonDetailsCardSprite {
     grid-area: sprite;
@@ -460,27 +357,25 @@
     width: 250px;
     border: 1px solid;
     margin-bottom: 5px;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
   }
+
   #pokemonDetailsCardInfo{
     font-size: 1.4vh;
     line-height: 150%;
   }
 
-
   img{
-    /* padding-top: 30px; */
-    /* height: 110px; */
-    padding-left: 55px;
-    /* padding-bottom: 30px; */
-
     width: 60%;
     height: auto;
   }
 
   .questionMarkImage{
-    height: 100px;
-    padding-left: 107px;
-    padding-top: 2px;
+    width: 30%;
+    height: auto;
   }
 
   #pokemonDetailsCardInfo {
@@ -498,26 +393,22 @@
 
   /* 3)Footer */
   footer{
-    text-align: center;
     background-color: var(--pokemonDarkBlue);
-
-    margin-top: 10px;
     border-top: 2px solid #221811;
     padding-bottom: 5px;
-
     color: rgb(187, 187, 187);
-
-    
     position: fixed;
     bottom: 0;
     width: 100%;
     height: 2vh;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
   }
 }
 
 /* 3. Mobile - Portrait */
-/* desktop: 492 */
-/* viewport: 475*/
 @media screen and (orientation: Portrait) and (max-width: 414px) and (max-height: 896px) {
   #pokemonHeading{
     width: auto;
@@ -528,65 +419,23 @@
   .grid {
     display: inline;
   }
+
   #item1{
     grid-column: 1 / 2;
-    max-width: 251px;
-    min-width: 250px;
+    max-width: 100vw;
+    min-width: 100vw;
     height: 25vh;
-  }
-  #pokemonSubheading{
-    text-align: center;
-
-    padding-top: 0rem;
-    max-width: 251px;
-    min-width: 250px;
-  }
-  #pokemonSubheadingText{
-    font-family: "PokemonSolid"; 
-    color: black;
-    font-weight: bolder; 
-    font-size: 1.7rem;
-
-    display: inline;
-    height: 7vh;
-  }
-
-  #pokemonSubheadingCounter{
-    font-family: "PokemonHollow"; 
-    font-weight:bolder; 
-    font-size: 1.5rem;
-    margin: 0rem 0rem 0.625rem 0rem;
-    display: inline;
   }
 
   #pokemonListContainer{
-
     font: 16px Arial, Serif;
     border: none;
-
     overflow: scroll;
     scrollbar-color: black white;
     scrollbar-width: thin;
     overflow-x: hidden;
     text-align: center;
-    /* max-width: 251px;
-    min-width: 250px; */
-
     height: 25vh;
-
-  }
-  #item1{
-    /* text-align: center; */
-    max-width: 100vw;
-    min-width: 100vw;
-    height: 25vh;
-  }
-  #pokemonSubheading{
-    text-align: center;
-
-    padding-top: 0rem;
-    max-width: 100vw;
-    min-width: 100vw;
   }
 
   #pokemonListContainer{
@@ -598,16 +447,14 @@
   .pokemonButton{
     font-size: 4vh; 
   }
-  /* ------------------------------------------ */
-  #pokemonSubheading{
-    display: none;
-  }
+
   #pokemonSubheadingText{
     text-align: center;
+    font-size: 2.5vh;
   }
 
-  #pokemonList{
-    text-align: center;
+  #pokemonSubheadingCounter{
+    font-size: 2.5vh;
   }
 
   #item2{
@@ -616,15 +463,12 @@
     margin: 0 auto;
     height: 65vh;
     position: relative;
+    background-size: 40rem 15rem;
+    width: 100vw;
   } 
 
-
   #pokemonDetailsCardContainer {
-
     grid-template-rows: 7vh 18vh 30vh;
-
-    /* top: 0vh;
-    left: 10vw; */
     position: absolute;
     top: 47%;
     left: 50%;
@@ -637,30 +481,24 @@
     justify-content: center;
     align-items: center; 
   }
-
-  
   
   #pokemonDetailsCardInfo{
     font-size: 2.2vh;
     line-height: 150%;
   }
+
   #pokemonDetailsCardSprite {
     grid-area: sprite;
     background-color: beige;
     width: 250px;
     border: 1px solid;
-    /* margin-bottom: 5px; */
-
     display: flex;
-  justify-content: center;
-  align-items: center;
+    justify-content: center;
+    align-items: center;
   }
-  img{
-    /* padding-top: 30px; */
-    /* height: 110px; */
-    padding-left: 0px;
-    /* padding-bottom: 30px; */
 
+  img{
+    padding-left: 0px;
     width: 50%;
     height: auto;
   }
@@ -672,63 +510,28 @@
 
 /* 3. Mobile - Landscape */
 @media screen and (orientation: landscape) and (max-height: 767px) and (max-width: 1023px) {
-  html, body, .container {
-    height: 100%;
-  }
   #no-mobile{
     position: absolute;
     z-index: 99;
-    
     background-color: #FFCB05;
     width: 100%;
     height: 100%;
     top: 0;
-
     display: flex;
     justify-content: center;
     align-items: center;
     text-align: center;
     font-size: 26px;
-    
-      display: flex;
-  justify-content: center;
-  align-items: center;
-  }
-
-  #no-mobile{
-    /* display: block; */
     line-height: 130%;
   }
+
   .grid {
     max-height: 350px;
   }
+
   #no-mobile-title{
     display: block;
     font-family: "PokemonSolid"; 
-    /* text-shadow: 5px 5px var(--pokemonLightBlue),
-      5px 0 var(--pokemonLightBlue),
-      5px -5px var(--pokemonLightBlue),
-      0 -5px var(--pokemonLightBlue),
-      -5px -5px var(--pokemonLightBlue),
-      -5px 0 var(--pokemonLightBlue),
-      -5px 5px var(--pokemonLightBlue),
-      0 5px var(--pokemonLightBlue),
-      4px 5px var(--pokemonLightBlue),
-      3px 5px var(--pokemonLightBlue),
-      2px 5px var(--pokemonLightBlue),
-      1px 5px var(--pokemonLightBlue),
-      -1px 5px var(--pokemonLightBlue),
-      -2px 5px var(--pokemonLightBlue),
-      -3px 5px var(--pokemonLightBlue),
-      -4px 5px var(--pokemonLightBlue),
-      -4px -5px var(--pokemonLightBlue),
-      -3px -5px var(--pokemonLightBlue),
-      -2px -5px var(--pokemonLightBlue),
-      -1px -5px var(--pokemonLightBlue),
-      1px -5px var(--pokemonLightBlue),
-      2px -5px var(--pokemonLightBlue),
-      3px -5px var(--pokemonLightBlue),
-      4px -5px var(--pokemonLightBlue); */
   }
   
   #no-mobile-alert{
