--- a/style.css
+++ b/style.css
@@ -137,7 +137,7 @@
   #item2{
     display: block;
     grid-column: 2 / -1;
-    background-image: url("pokemon_background.jpeg");
+    background-image: url("pokemon_background.jpg");
     background-repeat: repeat;
     height: 100vh; 
     min-width: 64vw;
@@ -317,7 +317,7 @@
   /* 2-2)item2 (Right) */
   #item2{
     grid-column: 2 / -1;
-    background-image: url("pokemon_background.jpeg");
+    background-image: url("pokemon_background.jpg");
     background-size: 93rem 33rem;
     height: 100vh; 
     width: 67vw;
