--- a/style.css
+++ b/style.css
@@ -34,7 +34,7 @@
 
 
 /* 1. Desktop, Tablet */
-@media screen and (orientation: landscape){
+@media screen and (orientation: landscape) and (min-height: 495px){
   #no-mobile{
     display: none;
   }
@@ -178,12 +178,16 @@
     width: 250px;
     border: 1px solid;
     margin-bottom: 5px;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
   }
 
   img{
-    height: 110px;
+    /* height: 110px;
     padding-left: 75px;
-    padding-bottom: 30px;
+    padding-bottom: 30px; */
   }
 
   .questionMarkImage{
@@ -231,9 +235,8 @@
   /* 1)Header */
   #pokemonHeading{
     height: 6vh;
-    line-height: 0.5;
     margin: 0rem 0rem;
-    padding: 20px 0px;
+    padding: 3.5vh 0;
 
     background-color: var(--pokemonDarkBlue);
 
@@ -410,10 +413,20 @@
 
 /* 3. Mobile - Portrait */
 @media screen and (orientation: Portrait) and (max-width: 414px) and (max-height: 896px) {
+  header{
+    /* display: flex;
+    justify-content: center;
+    align-items: center; */
+  }
+
   #pokemonHeading{
     width: auto;
-    height: 3vh;
+    height: 5vh;
     font-size: 6vw;
+    /* padding: 25px 0 20px 0; */
+    /* display: flex;
+    justify-content: center;
+    align-items: center; */
   }
   
   .grid {
@@ -509,7 +522,7 @@
 }
 
 /* 3. Mobile - Landscape */
-@media screen and (orientation: landscape) and (max-height: 767px) and (max-width: 1023px) {
+@media screen and (orientation: landscape) and (max-height: 495px)  {
   #no-mobile{
     position: absolute;
     z-index: 99;
@@ -523,6 +536,47 @@
     text-align: center;
     font-size: 26px;
     line-height: 130%;
+    
+    display: grid;
+    grid-row-column: 1fr 1fr;
+  }
+
+  .grid {
+    max-height: 350px;
+  }
+
+  #no-mobile-title{
+    display: block;
+    font-family: "PokemonSolid"; 
+  }
+  
+  #no-mobile-alert{
+    color: red;
+    font-weight: bold;
+  }
+
+  #pokemonHeading, #item1, #item2{
+    display: none;
+  }
+}
+
+@media screen and (orientation: landscape) and (max-width: 770px) {
+  #no-mobile{
+    position: absolute;
+    z-index: 99;
+    background-color: #FFCB05;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    font-size: 26px;
+    line-height: 130%;
+
+    display: grid;
+    grid-row-column: 1fr 1fr;
   }
 
   .grid {
