--- a/style.css
+++ b/style.css
@@ -100,6 +100,7 @@ h2{
 i .fab fa-html5{
   display: inline-block;
 }
-/* .fab fa-html5{
-  color: Tomato
-} */
+
+#portfolio-intro{
+  text-align: center;
+}
