--- a/new_html5_from_beginning/style.css
+++ b/new_html5_from_beginning/style.css
@@ -20,7 +20,7 @@ body{
 
 h1, h2, h3, h4, h5, h6{
   margin: 0;
-  padding-bottom: 50px 0;
+  /* padding-bottom: 50px 0px; */
   font-family: P3rman3nt-Bold;
 }
 
@@ -57,7 +57,6 @@ header{
 }
 
 #cameraCaptureButton{
-  /* margin: 0 auto; */
   position: absolute;
   transform: translateX(-50%);
   left: 42.5%;
