--- a/doraemonJSminiGamePortfolio/style.css
+++ b/doraemonJSminiGamePortfolio/style.css
@@ -1,5 +1,10 @@
+.no-mobile{
+  display: none;
+}
+
 html, body{
   margin: 0;
+  height: 100vh;
 }
 
 body{
@@ -15,30 +20,12 @@ body{
   font-family: "Press Start 2P";
   color: white;
   border-radius: 1rem;
-
   width: 55vw;
   display: block;
   margin: 0 auto;
   margin-top: 0.5rem;
-
   padding-top: 0.5rem;
-
   background-color: black;
-}
-
-.instruction{
-  text-align: center;
-  font-weight: 700;
-  border: 2px solid black;
-  padding: 1rem;
-  color: red;
-  min-width: 70vw;
-  margin: 0;
-}
-
-.container{
-  /* border: 1px solid black; */
-  /* margin: 5px; */
 }
 
 .canvasContainer{
@@ -56,7 +43,6 @@ body{
   border: 3px solid white;
   box-shadow: 10px 15px 10px black;
   width: 20rem;
-  /* min-width: 25vw; */
   display: block;
   margin: 0 auto;
   margin-top: 0.5rem;
@@ -83,24 +69,17 @@ body{
   justify-content: flex-end;
   border-radius: 7%;
   padding-top: 0.5rem;
-
-  /* width: 900px; */
   margin: 0 auto;
 }
 
 
 #scoreGoalHeading, #scoreEarnedHeading{
-  /* padding: 1rem; */
   color: white;
   font-size: 1rem;
   margin-top: 0;
   margin-bottom: 0.5rem;
   font-weight: bolder;
   font-family: "Press Start 2P";
-}
-
-#scoreEarned{
-  /* margin-left: 2.5rem; */
 }
 
 #scoreGoal, #scoreEarned{
@@ -121,15 +100,10 @@ body{
   padding: 1rem;
 } 
 
-/* #scoreEarnedHeading{
-  padding: 1rem;
-} */
-
 .buttonContainer{
   display: flex;
   justify-content: center;
   padding-bottom: 1rem;
-  /* width: 70vw; */
 }
 
 #startButton:hover, #pauseButton:hover{
@@ -168,10 +142,75 @@ body{
   font-size: 3rem;
 }
 
-
+footer{
+  text-align: center;
+  padding-bottom: 5px;
+  border-top: 1px solid white;
+  position: fixed;
+  bottom: 0;
+  width: 100%;
+  justify-content: center;
+  align-items: center;
+  background-color: black;
+  color: white;
+  font-weight: bold;
+}
 
 @media screen and (max-width: 620px), (max-height: 550px){
-  body{
+  .projectContainer{
     display: none;
+  }
+  
+  .no-mobile{
+    position: absolute;
+    z-index: 99;
+    background-image: linear-gradient(to right, red,orange,yellow,green,blue,indigo,violet);
+    /* margin: 0; */
+    width: 100%;
+    height: 100%;
+    top: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    font-size: 26px;
+    line-height: 130%;
+    
+    display: grid;
+    grid-template-rows: 1fr 1fr;
+  }
+
+  #no-mobile-title{
+    font-size: 1.5rem;
+    border: 3px solid white;
+    text-align: center;
+    font-family: "Press Start 2P";
+    color: white;
+    border-radius: 1rem;
+  
+    min-width: 70vw;
+    display: block;
+    margin: 0 auto;
+    padding: 0.5rem 1rem;
+  
+    background-color: black; 
+  }
+  
+  #no-mobile-alert{
+    color: black;
+    font-weight: bold;
+    font-size: 1.5rem;
+    border: 3px solid black;
+    text-align: center;
+    font-family: "Press Start 2P";
+    /* color: white; */
+    border-radius: 1rem;
+  
+    min-width: 70vw;
+    display: block;
+    margin: 0 auto;
+    padding: 0.5rem 1rem;
+  
+    background-color: yellow; 
   }
 }
